--- a/metadata.ini
+++ b/metadata.ini
@@ -4,7 +4,7 @@ collections=podpinacz
 [podpinacz]
 author=Kamil Drejer
 email=klamot@gmail.com
-name=Podpinacz
+name=podpinacz
 tags=podpinanie, inwentaryzacja
 description=Maki is an icon set made for map designers created by Mapbox
 qgis_minimum_version=3.0
